log
cd hashtable; make all
make[1]: Entering directory `/home/epord/Desktop/PacoPlusPlus/hashtable'
gcc -Wall -c -std=c99 hashtable.c -I./include
make[1]: Leaving directory `/home/epord/Desktop/PacoPlusPlus/hashtable'
cd types; make all
make[1]: Entering directory `/home/epord/Desktop/PacoPlusPlus/types'
gcc -Wall -c -std=c99 types.c -I./include
make[1]: Leaving directory `/home/epord/Desktop/PacoPlusPlus/types'
cd operations; make all
make[1]: Entering directory `/home/epord/Desktop/PacoPlusPlus/operations'
gcc -Wall -c -std=c99 dvn.c mul.c operations.c sub.c sum.c -I./include
dvn.c: In function ‘dvnStrStr’:
dvn.c:23:2: warning: implicit declaration of function ‘strlen’ [-Wimplicit-function-declaration]
  char* auxStr = calloc(1, strlen(o1->cont.str) + 1);
  ^
dvn.c:23:27: warning: incompatible implicit declaration of built-in function ‘strlen’ [enabled by default]
  char* auxStr = calloc(1, strlen(o1->cont.str) + 1);
                           ^
mul.c: In function ‘mulStrInt’:
mul.c:24:2: warning: implicit declaration of function ‘strlen’ [-Wimplicit-function-declaration]
  char* auxStr = calloc(1, abs(num) * strlen(o1->cont.str) + 1);
  ^
mul.c:24:38: warning: incompatible implicit declaration of built-in function ‘strlen’ [enabled by default]
  char* auxStr = calloc(1, abs(num) * strlen(o1->cont.str) + 1);
                                      ^
mul.c:25:2: warning: implicit declaration of function ‘multiplyString’ [-Wimplicit-function-declaration]
  multiplyString(o1->cont.str, abs(num), auxStr);
  ^
mul.c: In function ‘mulStrStr’:
mul.c:37:13: warning: incompatible implicit declaration of built-in function ‘strlen’ [enabled by default]
  int len1 = strlen(o1->cont.num);
             ^
mul.c:37:2: warning: passing argument 1 of ‘strlen’ makes pointer from integer without a cast [enabled by default]
  int len1 = strlen(o1->cont.num);
  ^
mul.c:37:2: note: expected ‘const char *’ but argument is of type ‘int’
mul.c:38:2: warning: passing argument 1 of ‘strlen’ makes pointer from integer without a cast [enabled by default]
  int len2 = strlen(o2->cont.num);
  ^
mul.c:38:2: note: expected ‘const char *’ but argument is of type ‘int’
mul.c:43:3: warning: implicit declaration of function ‘strcat’ [-Wimplicit-function-declaration]
   strcat(auxStr,o2->cont.str);
   ^
mul.c:43:3: warning: incompatible implicit declaration of built-in function ‘strcat’ [enabled by default]
mul.c:40:8: warning: unused variable ‘j’ [-Wunused-variable]
  int i,j;
        ^
operations.c: In function ‘deleteSubstr’:
operations.c:88:6: warning: unused variable ‘strLen’ [-Wunused-variable]
  int strLen = strlen(str);
      ^
sub.c: In function ‘subStrStr’:
sub.c:23:2: warning: implicit declaration of function ‘strlen’ [-Wimplicit-function-declaration]
  char* auxStr = calloc(1, strlen(o1->cont.str))-1;
  ^
sub.c:23:27: warning: incompatible implicit declaration of built-in function ‘strlen’ [enabled by default]
  char* auxStr = calloc(1, strlen(o1->cont.str))-1;
                           ^
sub.c:31:2: warning: implicit declaration of function ‘strncpy’ [-Wimplicit-function-declaration]
  strncpy(auxStr, o1->cont.str, i+1);
  ^
sub.c:31:2: warning: incompatible implicit declaration of built-in function ‘strncpy’ [enabled by default]
make[1]: Leaving directory `/home/epord/Desktop/PacoPlusPlus/operations'
yacc -d paco.y
paco.y:72.13-17: warning: symbol VALUE is used, but is not defined as a token and has no rules [-Wother]
 %type <obj> VALUE
             ^^^^^
paco.y:156.19-36: warning: type clash on default action: <boolExpr> != <expression> [-Wother]
 		| EXPRESS LE EXPRESS
                   ^^^^^^^^^^^^^^^^^^
paco.y:157.19-36: warning: type clash on default action: <boolExpr> != <expression> [-Wother]
 		| EXPRESS GT EXPRESS
                   ^^^^^^^^^^^^^^^^^^
paco.y:158.19-36: warning: type clash on default action: <boolExpr> != <expression> [-Wother]
 		| EXPRESS GE EXPRESS
                   ^^^^^^^^^^^^^^^^^^
paco.y: warning: 5 nonterminals useless in grammar [-Wother]
paco.y: warning: 7 rules useless in grammar [-Wother]
paco.y:89.1-5: warning: nonterminal useless in grammar: START [-Wother]
 START 	: BEGINPROG NEWLINE PROGRAM END {  }
 ^^^^^
paco.y:134.1-7: warning: nonterminal useless in grammar: IFBLOCK [-Wother]
 IFBLOCK	: IF '(' BOOLEXPR ')' NEWLINE PROGRAM END NEWLINE	{
 ^^^^^^^
paco.y:142.1-10: warning: nonterminal useless in grammar: WHILEBLOCK [-Wother]
 WHILEBLOCK: WHILE '(' BOOLEXPR ')' NEWLINE PROGRAM END NEWLINE	{
 ^^^^^^^^^^
paco.y:77.18-25: warning: nonterminal useless in grammar: BOOLEXPR [-Wother]
 %type <boolExpr> BOOLEXPR
                  ^^^^^^^^
paco.y:72.13-17: warning: nonterminal useless in grammar: VALUE [-Wother]
 %type <obj> VALUE
             ^^^^^
paco.y:89.11-44: warning: rule useless in grammar [-Wother]
 START 	: BEGINPROG NEWLINE PROGRAM END {  }
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
paco.y:134.11-139.121: warning: rule useless in grammar [-Wother]
 IFBLOCK	: IF '(' BOOLEXPR ')' NEWLINE PROGRAM END NEWLINE	{
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
paco.y:142.13-147.129: warning: rule useless in grammar [-Wother]
 WHILEBLOCK: WHILE '(' BOOLEXPR ')' NEWLINE PROGRAM END NEWLINE	{
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
paco.y:150.11-155.65: warning: rule useless in grammar [-Wother]
 BOOLEXPR: EXPRESS LT EXPRESS 	{
           ^^^^^^^^^^^^^^^^^^^^^
paco.y:156.19-36: warning: rule useless in grammar [-Wother]
 		| EXPRESS LE EXPRESS
                   ^^^^^^^^^^^^^^^^^^
paco.y:157.19-36: warning: rule useless in grammar [-Wother]
 		| EXPRESS GT EXPRESS
                   ^^^^^^^^^^^^^^^^^^
paco.y:158.19-36: warning: rule useless in grammar [-Wother]
 		| EXPRESS GE EXPRESS
                   ^^^^^^^^^^^^^^^^^^
paco.y: warning: 5 shift/reduce conflicts [-Wconflicts-sr]
lex paco.l
gcc -Wall -g -std=c99 *.c types/*.o hashtable/*.o operations/*.o -o pacopp.out -ly -lm
lex.yy.c: In function ‘yy_init_buffer’:
lex.yy.c:1494:9: warning: implicit declaration of function ‘fileno’ [-Wimplicit-function-declaration]
         b->yy_is_interactive = file ? (isatty( fileno(file) ) > 0) : 0;
         ^
paco.l: At top level:
lex.yy.c:1246:17: warning: ‘yyunput’ defined but not used [-Wunused-function]
     static void yyunput (int c, register char * yy_bp )
                 ^
lex.yy.c:1287:16: warning: ‘input’ defined but not used [-Wunused-function]
     static int input  (void)
                ^
y.tab.c: In function ‘yyparse’:
y.tab.c:1245:7: warning: implicit declaration of function ‘yylex’ [-Wimplicit-function-declaration]
       yychar = yylex ();
       ^
paco.y:312:10: warning: passing argument 1 of ‘malloc’ makes integer from pointer without a cast [enabled by default]
          $$->funcCreator = malloc("createInt()" + digitCount($1) + 1);
          ^
In file included from paco.y:3:0:
/usr/include/stdlib.h:466:14: note: expected ‘size_t’ but argument is of type ‘char *’
 extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
              ^
paco.y:318:10: warning: passing argument 1 of ‘malloc’ makes integer from pointer without a cast [enabled by default]
          $$->funcCreator = malloc("createDecimal()" + digitCount($1) + 20 + 1); // 20 decimals max
          ^
In file included from paco.y:3:0:
/usr/include/stdlib.h:466:14: note: expected ‘size_t’ but argument is of type ‘char *’
 extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
              ^
paco.y:324:10: warning: passing argument 1 of ‘malloc’ makes integer from pointer without a cast [enabled by default]
          $$->funcCreator = malloc("createString()" + strlen($1) + 1);
          ^
In file included from paco.y:3:0:
/usr/include/stdlib.h:466:14: note: expected ‘size_t’ but argument is of type ‘char *’
 extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
              ^
paco.y: In function ‘main’:
paco.y:339:3: warning: passing argument 3 of ‘createHashTable’ from incompatible pointer type [enabled by default]
   var_table = createHashTable(sizeof(char *), sizeof(_object), &str_hash, 20, &str_eql);
   ^
In file included from paco.y:9:0:
hashtable/include/hashtable.h:61:1: note: expected ‘hashFunction’ but argument is of type ‘unsigned int (*)(char *)’
 createHashTable(size_t key_size, size_t value_size, \
 ^
paco.y:339:3: warning: passing argument 5 of ‘createHashTable’ from incompatible pointer type [enabled by default]
   var_table = createHashTable(sizeof(char *), sizeof(_object), &str_hash, 20, &str_eql);
   ^
In file included from paco.y:9:0:
hashtable/include/hashtable.h:61:1: note: expected ‘equalsFunction’ but argument is of type ‘unsigned int (*)(const char *, const char *)’
 createHashTable(size_t key_size, size_t value_size, \
 ^
paco.y: In function ‘printExpr’:
paco.y:479:4: warning: implicit declaration of function ‘printNum’ [-Wimplicit-function-declaration]
    printNum((y_number*)expr->content);
    ^
paco.y: At top level:
paco.y:499:6: warning: conflicting types for ‘printNum’ [enabled by default]
 void printNum(y_number* num) {
      ^
paco.y:479:4: note: previous implicit declaration of ‘printNum’ was here
    printNum((y_number*)expr->content);
    ^
paco.y: In function ‘printObject’:
paco.y:506:5: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘uint64_t’ [-Wformat=]
     printf("TYPE = %d\n", o->type->id);
     ^
paco.y: In function ‘addInstToProg’:
paco.y:542:2: error: expected ‘;’ before ‘}’ token
  }
  ^
make: *** [all] Error 1
